syntax = "proto3";

package com.linecorp.decaton.protocol;

// Making all fields optional in order to keep schemas compatible with Protocol Buffers 3 for future update

// The metadata of a task, which should contain all information which is not representing task data but can be
// necessary on processor side.
message TaskMetadataProto {
    // Production timestamp of the task. May be empty if the task is produced by a producer other than default DecatonClient implementation
    int64 timestamp_millis = 1;
    // Field indicates which application produced the task. May be empty if the task is produced by a producer other than default DecatonClient implementation
    string source_application_id = 2;
    // Field indicates which instance produced the task. May be empty if the task is produced by a producer other than default DecatonClient implementation
    string source_instance_id = 3;
    // Field indicates how many attempts were in the past for processing this task.
    int64 retry_count = 4;
    // Field indicates when this task wants to be executed.
    // It is guaranteed that this task is executed *AT LEAST AFTER THAN OR EQUAL TO* the time configured,
    // but it isn't guaranteed to be executed exactly at the time.
    int64 scheduled_time_millis = 5;
}

message OffsetIndexEntryProto {
    uint64 start_offset = 1;
    uint64 start_index = 2;
    uint32 length = 3;
}

message OffsetIndexProto {
    uint64 first_index = 1;
    repeated OffsetIndexEntryProto entries = 2;
}

message BitMapProto {
    uint32 size = 1;
    repeated uint64 buckets = 2;
}

message OffsetStorageComplexProto {
    OffsetIndexProto index = 1;
    BitMapProto comp_flags = 2;
}
