syntax = "proto3";
import "decaton.proto";

package com.linecorp.decaton.protocol.internal;

// The topic level message struct of the message to request Decaton for processing a task.
//
// When Decaton had started, Kafka didn't have record headers yet so we needed to wrap tasks
// in a protocol to propagate task metadata.
// As we can use headers now, decaton client has started to support propagating metadata
// through headers and sending tasks as record value directly.
// This protocol could be removed in the future release.
message DecatonTaskRequest {
    option deprecated = true;

    TaskMetadataProto metadata = 1;
    bytes serialized_task = 2;
}
